--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ai-email-app</title>
+  <link rel="shortcut icon" href="/logo.svg" type="image/x-icon">
 
   <script>
     // On page load or when changing themes, best to add inline in `head` to avoid FOUC
