--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ai-email-app</title>
+  <title>repsac-email</title>
   <link rel="shortcut icon" href="/logo.svg" type="image/x-icon">
 
   <script>
